force-app/main/default/objects/Embryo__c/fields/TARFO_Biopsy_Scientist__c.field-meta.xml
<CustomField>
    <fullName>TARFO_Biopsy_Scientist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TARFO Biopsy Scientist</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsScientist__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Embryos4</relationshipName>
    <type>Lookup</type>
</CustomField>