force-app/main/default/objects/Embryo__c/fields/Thaw_Scientist_Is_Blank__c.field-meta.xml
<CustomField>
    <fullName>Thaw_Scientist_Is_Blank__c</fullName>
    <formula>IF( Thaw_Scientist__c=&apos;&apos;,FALSE,TRUE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thaw Scientist Is Blank</label>
    <type>Checkbox</type>
</CustomField>