force-app/main/default/objects/Embryo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Embryo_Number__c</columns>
    <columns>Household__c</columns>
    <columns>Embryo_Status__c</columns>
    <columns>Embryo_Created_In_Cycle__c</columns>
    <columns>Embryo_Cycle_Transferred_In__c</columns>
    <columns>PGT_Result__c</columns>
    <columns>Notes__c</columns>
    <columns>Grading__c</columns>
    <columns>Storage_Date__c</columns>
    <columns>Storage_Location__c</columns>
    <columns>Storage_Location_Lookup__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>