force-app/main/default/objects/Embryo__c/listViews/All_embryos_currently_in_the_lab.listView-meta.xml
<ListView>
    <fullName>All_embryos_currently_in_the_lab</fullName>
    <columns>Household__c</columns>
    <columns>Related_Cycle__c</columns>
    <columns>NAME</columns>
    <columns>Embryo_Number__c</columns>
    <columns>Insemination_Type__c</columns>
    <columns>Cycle_Day__c</columns>
    <columns>Cell_Number__c</columns>
    <columns>Fragmentation__c</columns>
    <columns>Other__c</columns>
    <columns>Grading__c</columns>
    <columns>Embryo_Status__c</columns>
    <columns>Egg_Sample__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Embryo_Status__c</field>
        <operation>equals</operation>
        <value>For Freeze</value>
    </filters>
    <label>All embryos currently for fz</label>
</ListView>