force-app/main/default/objects/Embryo__c/listViews/Discard_Logbook.listView-meta.xml
<ListView>
    <fullName>Discard_Logbook</fullName>
    <columns>Household__c</columns>
    <columns>NAME</columns>
    <columns>PGT_Result__c</columns>
    <columns>Storage_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Embryo_Status__c</field>
        <operation>equals</operation>
        <value>Discarded</value>
    </filters>
    <filters>
        <field>Storage_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/1900</value>
    </filters>
    <filters>
        <field>Survivability__c</field>
        <operation>equals</operation>
    </filters>
    <label>Disposal Logbook</label>
</ListView>