force-app/main/default/objects/Embryo__c/listViews/Embryos_awaiting_results.listView-meta.xml
<ListView>
    <fullName>Embryos_awaiting_results</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Embryo_Number__c</columns>
    <columns>Household__c</columns>
    <columns>Embryo_Status__c</columns>
    <columns>Embryo_Created_In_Cycle__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Embryo_Status__c</field>
        <operation>equals</operation>
        <value>PGT Testing In Progress</value>
    </filters>
    <filters>
        <field>PGT_Reason__c</field>
        <operation>equals</operation>
        <value>1 = Aneuploidy screening,3 = Chromosomal structural rearrangements (e.g. translocations),4 = Other</value>
    </filters>
    <label>Embryos awaiting results</label>
</ListView>