force-app/main/default/objects/Embryo__c/listViews/Transport_Logbook1.listView-meta.xml
<ListView>
    <fullName>Transport_Logbook1</fullName>
    <columns>Household__c</columns>
    <columns>NAME</columns>
    <columns>Storage_Date__c</columns>
    <columns>Notes__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Embryo_Status__c</field>
        <operation>equals</operation>
        <value>Transported</value>
    </filters>
    <label>Transport Logbook (Export)</label>
</ListView>