force-app/main/default/objects/Embryo__c/listViews/Transport_Logbook_Import.listView-meta.xml
<ListView>
    <fullName>Transport_Logbook_Import</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Household__c</columns>
    <columns>NAME</columns>
    <columns>Notes__c</columns>
    <columns>Embryo_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Embryo_Created_In_Cycle__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Storage_Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/1900</value>
    </filters>
    <label>Transport Logbook (Import)</label>
</ListView>