force-app/main/default/objects/Embryo__c/listViews/Transport_Report.listView-meta.xml
<ListView>
    <fullName>Transport_Report</fullName>
    <columns>Household__c</columns>
    <columns>Embryo_Number__c</columns>
    <columns>Fertilisation_Status__c</columns>
    <columns>Cell_Number__c</columns>
    <columns>Grading__c</columns>
    <columns>Embryo_Status__c</columns>
    <columns>Cycle_Day__c</columns>
    <columns>Device_Type__c</columns>
    <columns>Freeze_Media__c</columns>
    <columns>Insemination_Type__c</columns>
    <columns>PGT_Result__c</columns>
    <columns>Storage_Date__c</columns>
    <columns>Storage_Location_Lookup__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Household__c</field>
        <operation>equals</operation>
        <value>savage</value>
    </filters>
    <filters>
        <field>Embryo_Status__c</field>
        <operation>equals</operation>
        <value>Ongoing,For Transfer,For Freeze,PGT Testing In Progress,Frozen</value>
    </filters>
    <label>Transport Report</label>
</ListView>